syntax = "proto3";
package restaurant_rpc;

option go_package = "restaurant_rpc/";

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginResp {
    string accessToken = 1;
    string refreshToken = 2;
}

service AuthService {
    rpc Login(LoginReq) returns (LoginResp) {}
}